test/typecheck/bad-invoke-type-mismatch.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func (param i32))
  (export "foo" 0))
(invoke "foo" (f32.const 1.5))
(;; STDERR ;;;
out/test/typecheck/bad-invoke-type-mismatch.txt:5:17: error: unexpected token 0, expected (.
  (export "foo" 0))
                ^
;;; STDERR ;;)
